--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -24,6 +24,10 @@ ARG VITE_NOTIFICATIONS_API_URL
 ARG VITE_MAP_PROVIDER
 ARG VITE_GOOGLE_MAPS_KEY
 ARG VITE_NOMINATIM_URL
+ARG VITE_LEAFLET_TILE_URL
+ARG VITE_LEAFLET_ATTRIBUTION
+ARG VITE_DEFAULT_CENTER_LAT
+ARG VITE_DEFAULT_CENTER_LNG
 
 # Set environment variables for build
 ENV VITE_AUTH_API_URL=${VITE_AUTH_API_URL}
@@ -40,6 +44,10 @@ ENV VITE_NOTIFICATIONS_API_URL=${VITE_NOTIFICATIONS_API_URL}
 ENV VITE_MAP_PROVIDER=${VITE_MAP_PROVIDER}
 ENV VITE_GOOGLE_MAPS_KEY=${VITE_GOOGLE_MAPS_KEY}
 ENV VITE_NOMINATIM_URL=${VITE_NOMINATIM_URL}
+ENV VITE_LEAFLET_TILE_URL=${VITE_LEAFLET_TILE_URL}
+ENV VITE_LEAFLET_ATTRIBUTION=${VITE_LEAFLET_ATTRIBUTION}
+ENV VITE_DEFAULT_CENTER_LAT=${VITE_DEFAULT_CENTER_LAT}
+ENV VITE_DEFAULT_CENTER_LNG=${VITE_DEFAULT_CENTER_LNG}
 
 # Build the application
 RUN npm run build
