--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,31 @@
 DATABASE_NAME=brooks
 DATABASE_USER=brooks
 DATABASE_PASSWORD=CHANGE_ME_STRONG_PASSWORD_HERE
+DATABASE_URL=jdbc:postgresql://localhost:5432/brooks
+SERVER_PORT=8080
+POSTGRES_USER=brooks
+POSTGRES_PASSWORD=CHANGE_ME_STRONG_PASSWORD_HERE
+
+# Service Database Users
+AUTH_DB_USER=auth_user
+SOCIAL_DB_USER=social_user
+LISTS_DB_USER=lists_user
+PINS_DB_USER=pins_user
+MODERATION_DB_USER=moderation_user
+
+# Service Database Names
+AUTH_DB_NAME=auth_db
+SOCIAL_DB_NAME=social_db
+LISTS_DB_NAME=lists_db
+PINS_DB_NAME=pins_db
+MODERATION_DB_NAME=moderation_db
+
+# Service Database URLs
+AUTH_DB_URL=jdbc:postgresql://localhost:5432/auth_db
+SOCIAL_DB_URL=jdbc:postgresql://localhost:5432/social_db
+LISTS_DB_URL=jdbc:postgresql://localhost:5432/lists_db
+PINS_DB_URL=jdbc:postgresql://localhost:5432/pins_db
+MODERATION_DB_URL=jdbc:postgresql://localhost:5432/moderation_db
 
 # ==========================================
 # JWT Configuration
@@ -15,6 +40,11 @@ DATABASE_PASSWORD=CHANGE_ME_STRONG_PASSWORD_HERE
 BROOKS_JWT_SECRET=CHANGE_ME_LONG_RANDOM_STRING_AT_LEAST_32_CHARACTERS
 # Legacy monolith (docker-compose.yml) uses JWT_SECRET
 JWT_SECRET=CHANGE_ME_LONG_RANDOM_STRING_AT_LEAST_32_CHARACTERS
+JWT_ACCESS_TOKEN_EXPIRATION=900000
+JWT_REFRESH_TOKEN_EXPIRATION=2592000000
+BROOKS_JWT_ISSUER=brooks
+BROOKS_JWT_ACCESS_TTL=900
+BROOKS_JWT_REFRESH_TTL=2592000
 
 # ==========================================
 # Auth0 Configuration
@@ -22,6 +52,7 @@ JWT_SECRET=CHANGE_ME_LONG_RANDOM_STRING_AT_LEAST_32_CHARACTERS
 # Get these from your Auth0 Dashboard: https://manage.auth0.com/
 AUTH0_DOMAIN=your-tenant.auth0.com
 AUTH0_AUDIENCE=https://your-api-audience
+AUTH0_ISSUER_URI=https://your-tenant.auth0.com/
 
 # ==========================================
 # Frontend Environment Variables (Vite)
@@ -49,8 +80,14 @@ VITE_MAP_PROVIDER=leaflet
 # Google Maps API Key (only needed if using Google Maps)
 VITE_GOOGLE_MAPS_KEY=
 
+# Default map center
+VITE_DEFAULT_CENTER_LAT=41.9028
+VITE_DEFAULT_CENTER_LNG=12.4964
+
 # Nominatim URL for geocoding (OpenStreetMap)
 VITE_NOMINATIM_URL=https://nominatim.openstreetmap.org
+VITE_LEAFLET_TILE_URL=https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png
+VITE_LEAFLET_ATTRIBUTION="&copy; <a href=\"https://www.openstreetmap.org/copyright\">OpenStreetMap</a>"
 
 # ==========================================
 # Internal Service-to-Service Auth
@@ -59,6 +96,43 @@ INTERNAL_SERVICE_KEY=CHANGE_ME_INTERNAL_KEY
 INTERNAL_SERVICE_KEYS=CHANGE_ME_INTERNAL_KEY
 INTERNAL_SERVICE_ALLOWED_NAMES=pins-service
 INTERNAL_SERVICE_KEY_MAP=pins-service=CHANGE_ME_INTERNAL_KEY
+INTERNAL_SERVICE_NAME=pins-service
+
+# ==========================================
+# Service URLs
+# ==========================================
+SOCIAL_SERVICE_URL=http://localhost:8082
+LISTS_SERVICE_URL=http://localhost:8083
+
+# ==========================================
+# Service Ports
+# ==========================================
+AUTH_SERVICE_PORT=8081
+SOCIAL_SERVICE_PORT=8082
+LISTS_SERVICE_PORT=8083
+PINS_SERVICE_PORT=8084
+MEDIA_SERVICE_PORT=8085
+MODERATION_SERVICE_PORT=8086
+NOTIFICATIONS_SERVICE_PORT=8087
+
+# ==========================================
+# CORS Origins
+# ==========================================
+BROOKS_WEB_ORIGINS=http://localhost:3000
+
+# ==========================================
+# Pins Service Cleanup/Proximity
+# ==========================================
+BROOKS_BUCKET_SIZE_DEG=0.01
+BROOKS_CLEANUP_ENABLED=true
+BROOKS_CLEANUP_BATCH_SIZE=1000
+BROOKS_CLEANUP_RETENTION_DAYS=7
+BROOKS_CLEANUP_CRON="0 0 2 * * ?"
+
+# ==========================================
+# Media Service
+# ==========================================
+MEDIA_UPLOAD_BASE_URL=https://upload.example.com
 
 # ==========================================
 # Notes
