--- a/.env.template
+++ b/.env.template
@@ -19,27 +19,53 @@ VITE_AUTH0_DOMAIN=your-tenant.auth0.com
 VITE_AUTH0_CLIENT_ID=your-client-id-here
 VITE_AUTH0_AUDIENCE=https://your-api-identifier
 VITE_AUTH0_REDIRECT_URI=http://localhost:3000
+VITE_LEAFLET_TILE_URL=https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png
+VITE_LEAFLET_ATTRIBUTION="&copy; <a href=\"https://www.openstreetmap.org/copyright\">OpenStreetMap</a>"
+VITE_DEFAULT_CENTER_LAT=41.9028
+VITE_DEFAULT_CENTER_LNG=12.4964
+VITE_AUTH_API_URL=http://localhost:8081
+VITE_SOCIAL_API_URL=http://localhost:8082
+VITE_LISTS_API_URL=http://localhost:8083
+VITE_PINS_API_URL=http://localhost:8084
+VITE_MEDIA_API_URL=http://localhost:8085
+VITE_MODERATION_API_URL=http://localhost:8086
+VITE_NOTIFICATIONS_API_URL=http://localhost:8087
+VITE_MAP_PROVIDER=leaflet
+VITE_GOOGLE_MAPS_KEY=
+VITE_NOMINATIM_URL=https://nominatim.openstreetmap.org/reverse
 
 # ===================================
 # Database Configuration
 # ===================================
 # PostgreSQL connection strings
+DATABASE_NAME=brooks
+DATABASE_USER=brooks
+DATABASE_PASSWORD=change-this-secure-password
+DATABASE_URL=jdbc:postgresql://localhost:5432/brooks
+SERVER_PORT=8080
+POSTGRES_USER=brooks
+POSTGRES_PASSWORD=change-this-secure-password
+
 PINS_DB_URL=jdbc:postgresql://localhost:5432/pins_db
 PINS_DB_USER=pins_user
 PINS_DB_PASSWORD=change-this-secure-password
 
+SOCIAL_DB_NAME=social_db
 SOCIAL_DB_URL=jdbc:postgresql://localhost:5432/social_db
 SOCIAL_DB_USER=social_user
 SOCIAL_DB_PASSWORD=change-this-secure-password
 
+LISTS_DB_NAME=lists_db
 LISTS_DB_URL=jdbc:postgresql://localhost:5432/lists_db
 LISTS_DB_USER=lists_user
 LISTS_DB_PASSWORD=change-this-secure-password
 
+AUTH_DB_NAME=auth_db
 AUTH_DB_URL=jdbc:postgresql://localhost:5432/auth_db
 AUTH_DB_USER=auth_user
 AUTH_DB_PASSWORD=change-this-secure-password
 
+MODERATION_DB_NAME=moderation_db
 MODERATION_DB_URL=jdbc:postgresql://localhost:5432/moderation_db
 MODERATION_DB_USER=moderation_user
 MODERATION_DB_PASSWORD=change-this-secure-password
@@ -50,6 +76,12 @@ MODERATION_DB_PASSWORD=change-this-secure-password
 # Generate a strong random secret (min 256 bits / 32 bytes)
 # Example: openssl rand -base64 32
 BROOKS_JWT_SECRET=generate-a-secure-random-secret-here-min-32-bytes
+BROOKS_JWT_ISSUER=brooks
+BROOKS_JWT_ACCESS_TTL=900
+BROOKS_JWT_REFRESH_TTL=2592000
+JWT_SECRET=generate-a-secure-random-secret-here-min-32-bytes
+JWT_ACCESS_TOKEN_EXPIRATION=900000
+JWT_REFRESH_TOKEN_EXPIRATION=2592000000
 
 # ===================================
 # Service URLs (for local development)
@@ -69,6 +101,25 @@ PINS_SERVICE_PORT=8084
 MEDIA_SERVICE_PORT=8085
 MODERATION_SERVICE_PORT=8086
 NOTIFICATIONS_SERVICE_PORT=8087
+
+# ===================================
+# CORS Origins
+# ===================================
+BROOKS_WEB_ORIGINS=http://localhost:3000
+
+# ===================================
+# Pins Service Cleanup/Proximity
+# ===================================
+BROOKS_BUCKET_SIZE_DEG=0.01
+BROOKS_CLEANUP_ENABLED=true
+BROOKS_CLEANUP_BATCH_SIZE=1000
+BROOKS_CLEANUP_RETENTION_DAYS=7
+BROOKS_CLEANUP_CRON="0 0 2 * * ?"
+
+# ===================================
+# Media Service
+# ===================================
+MEDIA_UPLOAD_BASE_URL=https://upload.example.com
 
 # ===================================
 # Optional: Production Overrides
