--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/brooks
-    username: brooks
-    password: brooks
+    url: ${DATABASE_URL}
+    username: ${DATABASE_USER}
+    password: ${DATABASE_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: validate
@@ -15,8 +15,11 @@ spring:
     serialization:
       WRITE_DATES_AS_TIMESTAMPS: false
 
+media:
+  upload-base-url: ${MEDIA_UPLOAD_BASE_URL}
+
 server:
-  port: 8080
+  port: ${SERVER_PORT}
 
 management:
   endpoints:
