--- a/services/moderation-service/src/main/resources/application.yml
+++ b/services/moderation-service/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: ${MODERATION_DB_URL:jdbc:postgresql://localhost:5432/moderation_db}
-    username: ${MODERATION_DB_USER:moderation_user}
-    password: ${MODERATION_DB_PASSWORD:moderation_pass}
+    url: ${MODERATION_DB_URL}
+    username: ${MODERATION_DB_USER}
+    password: ${MODERATION_DB_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: validate
@@ -11,7 +11,7 @@ spring:
     locations: classpath:db/migration
 
 server:
-  port: ${MODERATION_SERVICE_PORT:8086}
+  port: ${MODERATION_SERVICE_PORT}
 
 auth0:
   issuer-uri: ${AUTH0_ISSUER_URI}
@@ -22,5 +22,9 @@ management:
     web:
       exposure:
         include: health,info,metrics
+
+brooks:
+  web:
+    origins: ${BROOKS_WEB_ORIGINS}
 
 
