--- a/services/pins-service/src/main/resources/application.yml
+++ b/services/pins-service/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: ${PINS_DB_URL:jdbc:postgresql://localhost:5432/pins_db}
-    username: ${PINS_DB_USER:pins_user}
-    password: ${PINS_DB_PASSWORD:pins_pass}
+    url: ${PINS_DB_URL}
+    username: ${PINS_DB_USER}
+    password: ${PINS_DB_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: validate
@@ -14,7 +14,7 @@ spring:
     locations: classpath:db/migration
 
 server:
-  port: ${PINS_SERVICE_PORT:8084}
+  port: ${PINS_SERVICE_PORT}
 
 auth0:
   issuer-uri: ${AUTH0_ISSUER_URI}
@@ -22,22 +22,24 @@ auth0:
 
 brooks:
   social:
-    base-url: ${SOCIAL_SERVICE_URL:http://localhost:8082}
+    base-url: ${SOCIAL_SERVICE_URL}
   lists:
-    base-url: ${LISTS_SERVICE_URL:http://localhost:8083}
+    base-url: ${LISTS_SERVICE_URL}
   proximity:
-    bucket-size-deg: ${BROOKS_BUCKET_SIZE_DEG:0.01}
+    bucket-size-deg: ${BROOKS_BUCKET_SIZE_DEG}
   cleanup:
-    enabled: ${BROOKS_CLEANUP_ENABLED:true}
-    batch-size: ${BROOKS_CLEANUP_BATCH_SIZE:1000}
-    retention-days: ${BROOKS_CLEANUP_RETENTION_DAYS:7}
-    cron: ${BROOKS_CLEANUP_CRON:0 0 2 * * ?}
+    enabled: ${BROOKS_CLEANUP_ENABLED}
+    batch-size: ${BROOKS_CLEANUP_BATCH_SIZE}
+    retention-days: ${BROOKS_CLEANUP_RETENTION_DAYS}
+    cron: ${BROOKS_CLEANUP_CRON}
+  web:
+    origins: ${BROOKS_WEB_ORIGINS}
 
 # Internal service-to-service authentication
 internal:
   service:
-    name: ${INTERNAL_SERVICE_NAME:pins-service}
-    key: ${INTERNAL_SERVICE_KEY:pins-service-key-change-in-production}
+    name: ${INTERNAL_SERVICE_NAME}
+    key: ${INTERNAL_SERVICE_KEY}
 
 management:
   endpoints:
@@ -85,4 +87,3 @@ resilience4j:
         baseConfig: default
       listsService:
         baseConfig: default
-
